# engine13

./: .gitignore  AGENTS.md  Cargo.toml  ENGINE13_ARCHITECTURE.md  ENGINE13_EXTERNAL_PRESSURE_INVESTIGATION.md  ENGINE13_IMPROVEMENT_TASKS.md  ENGINE13_INFRASTRUCTURE_TASKS.md  ENGINE13_QWEN_TASKS.md  ENGINE13_SCENARIO3_DESIGN.md  MIGRATION.md  ROME_375_SCENARIO.md  digest.txt  eslint.config.mjs  index.html  package-lock.json  package.json  run.sh
.cargo/: config.toml
.codex/: config.toml
.github/workflows/: ci.yml
docs/: investigation_combat_asymmetry.md  investigation_combat_self_destruction.md  investigation_constantinople_cohesion_bonus.md  investigation_metric_scoping.md  investigation_typed_metric_keys.md  investigation_vassalage_conquest.md  narrative_evaluation.md  narrative_regression_baseline.md  narrative_review_pack.md  sim_baseline.md
src/: App.css  App.tsx  api.ts  commands.rs  db.rs  index.css  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src/application/: actions.rs  mod.rs  modes.rs  narrative.rs  save_load.rs
src/components/: ActionHistory.css  ActionHistory.tsx  ActorDetailPanel.css  ActorDetailPanel.tsx  ControlPanel.css  ControlPanel.tsx  DebugPanel.css  DebugPanel.tsx  FamilyPanel.css  FamilyPanel.tsx  GlobalMetricsPanel.css  GlobalMetricsPanel.tsx  MapPanel.tsx  NarrativePanel.css  NarrativePanel.tsx  SaveSlotModal.css  SaveSlotModal.tsx  ScenarioSelectScreen.css  ScenarioSelectScreen.tsx  SettingsPanel.css  SettingsPanel.tsx  StatusPanel.css  (+5 more)
tests/: scenario_conventions.rs
(+75 files in other folders)
