[package]
name = "engine13"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
rand = "0.8"
rand_chacha = "0.3"
futures-util = "0.3"
tauri = { version = "2" }
bytes = "1"
