[package]
name = "engine13-tauri"
version = "0.1.0"
description = "ENGINE13 Historical Simulation"
authors = ["Engine13 Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
engine13 = { path = ".." }
log = "0.4"
tauri-plugin-log = "2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "5.0"
